--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,11 @@
 *.iml
 *.ipr
 *.iws
+out/
 
 # Maven
 target/
+.mvn/wrapper/maven-wrapper.jar
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -19,10 +21,13 @@ build/
 
 # Logs
 *.log
+logs/
 
 # OS files
 .DS_Store
 Thumbs.db
 
-# Spring Boot
-logs/
+# Spring / Env
+application-local.yml
+application-local.properties
+.env
