--- a/restAPIs/src/main/resources/application.properties
+++ b/restAPIs/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=restAPIs
+
+#Port configuration
+server.port=8081
+
+#DB configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/studentsDB
+spring.datasource.username=postgres
+spring.datasource.password=vidush2004
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true  
+spring.jpa.properties.hibernate.format_sql=true
